--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v3
 
       - name: Install and Build 🔧
         run: |
@@ -15,7 +15,7 @@ jobs:
           VITE_API_KEY : ${{ secrets.VITE_API_KEY }}
           VITE_API_DOMAIN : ${{ secrets.VITE_API_DOMAIN }}
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.4.1
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: dist
