--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "leaflet": "^1.9.3",
     "pinia": "^2.0.33",
     "sass": "^1.60.0",
     "vue": "^3.2.47",
